// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> snapshots renders default 1`] = `
.c0 {
  background: #f8f8f8;
  border-radius: 4px;
  border: 2px solid #d2d2d2;
  color: #1a1a1a;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: #1a1a1a;
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

<div
  className="c0"
  type="default"
>
  Default
</div>
`;

exports[`<Alert /> snapshots renders error 1`] = `
.c0 {
  background: #c7254e;
  border-radius: 4px;
  border: 2px solid #861935;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: #fff;
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

<div
  className="c0"
  type="error"
>
  Error
</div>
`;

exports[`<Alert /> snapshots renders success 1`] = `
.c0 {
  background: #38bd93;
  border-radius: 4px;
  border: 2px solid #278265;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: #fff;
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

<div
  className="c0"
  type="success"
>
  Success
</div>
`;

exports[`<Alert /> snapshots renders warning 1`] = `
.c0 {
  background: #d4ab27;
  border-radius: 4px;
  border: 2px solid #93771b;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: #fff;
  text-decoration: underline;
}

.c0 a:hover {
  text-decoration: none;
}

<div
  className="c0"
  type="warning"
>
  Warning
</div>
`;
